--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,87 +1,6 @@
 <%= render partial: "layouts/new_form_employee" %>
 
-<div class="bg-white p-8 rounded-md w-full">
-  <div class=" flex items-center justify-between pb-6">
-    <div class="flex flex-col">
-      <h2 class="text-gray-600 font-semibold">Users</h2>
-      <%= link_to "View messages", messages_path %>
-    </div>
-    <%= form_with url: "", method: :get, data: { turbo_frame: "employees", turbo_action: "advance" } do |form| %>
+<%= render partial: "searchbar" %>
 
-      <div class="flex items-center justify-between">
-        <div class="flex bg-gray-50 items-center p-2 rounded-md mb-5">
-          <%= form.select :count, options_for_select([10, 25, 50, 100], selected: params[:count]), {}, { onchange: "this.form.requestSubmit()", class: 'bg-gray-50 outline-none ml-1 block' } %>
-        </div>
-      </div>
+  <%= render partial: "employees/table" %>
 
-
-      <div class="flex items-center justify-between">
-        <div class="flex bg-gray-50 items-center p-2 rounded-md mb-5">
-          <%= form.select :active, options_for_select(["active", "disable", "all"], selected: params[:active]), {}, { onchange: "this.form.requestSubmit()", class: 'bg-gray-50 outline-none ml-1 block' } %>
-        </div>
-      </div>
-
-
-      <div class="flex bg-gray-50 items-center p-2 rounded-md">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" viewBox="0 0 20 20"
-             fill="currentColor">
-          <path fill-rule="evenodd"
-                d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
-                clip-rule="evenodd"/>
-        </svg>
-
-        <%= form.search_field :query, value: params[:query], oninput: "this.form.requestSubmit()", class: "bg-gray-50 outline-none ml-1 block" %>
-    <% end %>
-    </div>
-  </div>
-</div>
-
-<%= turbo_frame_tag "employees" do %>
-  <%= turbo_stream_from "employees" %>
-  <table class="min-w-full leading-normal">
-    <thead>
-    <tr>
-      <th
-        class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-        <%= sort_link_to "Name", :name, data: { turbo_action: "advance" } %>
-      </th>
-      <th
-        class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-        <%= sort_link_to "Position", :position, data: { turbo_action: "advance" } %>
-      </th>
-      <th
-        class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-        <%= sort_link_to "Office", :office, data: { turbo_action: "advance" } %>
-      </th>
-      <th
-        class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-        <%= sort_link_to "Age", :age, data: { turbo_action: "advance" } %>
-      </th>
-      <th
-        class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-        <%= sort_link_to "Start_date", :start_date, data: { turbo_action: "advance" } %>
-      </th>
-      <th
-        class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-        <%= sort_link_to "Likes", :likes, data: { turbo_action: "advance" } %>
-      </th>
-      <th
-        class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-        <p>Delete</p>
-      </th>
-    </tr>
-    </thead>
-    <tbody>
-    <%= render @employees %>
-    </tbody>
-  </table>
-  <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto">
-    <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
-      <div class="px-5 py-5 bg-white border-t flex flex-col xs:flex-row items-center xs:justify-between">
-        <div class="inline-flex mt-2 xs:mt-0">
-          <%== pagy_nav @pagy %>
-        </div>
-      </div>
-    </div>
-<% end %>
-</div>
