--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,8 +1,9 @@
 <%= turbo_frame_tag dom_id(message) do %>
+  <%= turbo_stream_from message %>
   <div id="<%= dom_id message %>" class="p-6 m-2 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
     <div class="flex justify-between">
       <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">New Message</h5>
-      <%= button_to 'X', message_path(id: message.id), method: :delete, form: { data: { turbo_confirm: 'Are you sure ?' } }, class: "text-white" %>
+      <%= button_to 'X', message_path(id: message.id), method: :delete, class: "text-white" %>
     </div>
     <p class="mb-3 font-normal text-gray-700 dark:text-gray-400"><%= message.content %></p>
     <a href="<%= employees_path %>" class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
