--- a/app/views/layouts/_new_form_employee.html.erb
+++ b/app/views/layouts/_new_form_employee.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full flex flex-col items-center mt-6">
-  <%= form_with(model: @employee, remote: true, class: "w-full max-w-lg") do |form| %>
+  <%= form_with(model: @employee, remote: true, class: "w-full max-w-lg", data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }) do |form| %>
     <div class="flex flex-wrap -mx-3 mb-6">
       <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
         <%= form.label :name, class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
