--- a/app/views/layouts/_new_message_form.html.erb
+++ b/app/views/layouts/_new_message_form.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full flex justify-center">
-  <%= form_with(model: @message, remote: true, class: "w-full max-w-lg") do |form| %>
+  <%= form_with(model: @message, remote: true, class: "w-full max-w-lg", data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }) do |form| %>
     <div class="flex items-center mt-6">
-      <%= form.text_field :content, id: "chat-text", autocomplete: "off", class: "bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500" %>
+      <%= form.text_field :content, id: "chat-text", autocomplete: "off", class: "bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500", placeholder: "Enter your message here..." %>
       <%= form.submit "Send", data: { form_with: false }, class: "ml-6 shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded cursor-pointer" %>
     </div>
   <% end %>
