--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -51,14 +51,14 @@
         </a>
       </nav>
 
-      <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
-        <% if user_signed_in? %>
-          <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700' %>
-        <% else %>
-          <%= link_to 'Sign in', new_user_session_path, class: 'whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900' %>
-          <%= link_to 'Sign up', new_user_registration_path, class: 'ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700' %>
-        <% end %>
-      </div>
+    <!--  <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
+        <%# if user_signed_in? %>
+          <%#= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700' %>
+        <%# else %>
+          <%#= link_to 'Sign in', new_user_session_path, class: 'whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900' %>
+          <%#= link_to 'Sign up', new_user_registration_path, class: 'ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700' %>
+        <%# end %>
+      </div>-->
 
     </div>
   </div>
